ch_20_final_server : rev 5 refeed

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -55,6 +55,8 @@
     "servers. The details of these protocols are beyond the scope of this book, but  \n",
     "a brief overview will give you the information you need.\n",
     "\n",
+    "#### -- Protocols : HTTP and TCP --\n",
+    "\n",
     "The two main protocols involved in web servers are Hypertext Transfer Protocol  \n",
     "(HTTP) and Transmission Control Protocol (TCP). Both protocols are  \n",
     "request-response protocols, meaning a client initiates requests and a server  \n",
@@ -86,9 +88,10 @@
     "$ cd hello\n",
     "```\n",
     "\n",
-    "Now enter the code in Listing 20-1 in src/main.rs to start. This code will  \n",
-    "listen at the local address 127.0.0.1:7878 for incoming TCP streams. When it  \n",
-    "gets an incoming stream, it will print Connection established!.\n",
+    "Now enter the code in Listing 20-1 in src/main.rs to start. This code will :  \n",
+    "\n",
+    "- listen at the local address `127.0.0.1:7878` for incoming TCP streams. \n",
+    "- When it gets an incoming stream, it will print `Connection established!`.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -120,29 +123,42 @@
    "source": [
     "> Listing 20-1: Listening for incoming streams and printing a message when we receive a stream\n",
     "\n",
-    "Using TcpListener, we can listen for TCP connections at the address  \n",
-    "127.0.0.1:7878. In the address, the section before the colon is an IP address  \n",
-    "representing your computer (this is the same on every computer and doesn’t  \n",
-    "represent the authors’ computer specifically), and 7878 is the port. We’ve  \n",
-    "chosen this port for two reasons:  \n",
+    "#### -- TCP connection -> (IP address):(Port Number) --\n",
     "\n",
-    "- HTTP isn’t normally accepted on this port so our server is unlikely to  \n",
+    "Using `TcpListener`, we can :\n",
+    "\n",
+    "- listen for TCP connections at the address `127.0.0.1:7878`  \n",
+    "\n",
+    "In the address, the section before the colon is an IP address representing your  \n",
+    "computer (this is the same on every computer and doesn’t represent the authors’  \n",
+    "computer specifically), and `7878` is the port. We’ve chosen this port for two  \n",
+    "reasons:  \n",
+    "\n",
+    "- `HTTP` isn’t normally accepted on this port so our server is unlikely to  \n",
     "conflict with any other web server you might have running on your machine, and  \n",
-    "- 7878 is rust typed on a telephone.\n",
+    "- `7878` is `rust` typed on a telephone.\n",
     "\n",
-    "The bind function in this scenario works like the new function in that it will  \n",
-    "return a new TcpListener instance. The function is called bind because, in  \n",
-    "networking, connecting to a port to listen to is known as “binding to a port.”\n",
+    "The `bind` function in this scenario works like the `new` function in that it  \n",
+    "will return a new `TcpListener` instance. The function is called `bind` because,  \n",
+    "in networking :  \n",
     "\n",
-    "The bind function returns a Result<T, E>, which indicates that it’s possible  \n",
-    "for binding to fail. For example, connecting to port 80 requires administrator  \n",
-    "privileges (nonadministrators can listen only on ports higher than 1023), so if  \n",
-    "we tried to connect to port 80 without being an administrator, binding wouldn’t  \n",
-    "work. Binding also wouldn’t work, for example, if we ran two instances of our  \n",
-    "program and so had two programs listening to the same port. Because we’re  \n",
-    "writing a basic server just for learning purposes, we won’t worry about  \n",
-    "handling these kinds of errors; instead, we use unwrap to stop the program if  \n",
-    "errors happen."
+    "- connecting to a `port` to `listen` to is known as “binding to a port.”\n",
+    "\n",
+    "#### -- TCPListener::bind() returns Result<T,E> to handle ERRORS --\n",
+    "\n",
+    "The `bind` function returns a `Result<T, E>`, which indicates that it’s  \n",
+    "possible for binding to fail. For example :  \n",
+    "\n",
+    "- connecting to port `80` requires `administrator` privileges  \n",
+    "(nonadministrators can listen only on ports higher than 1023),  \n",
+    "- so if we tried to connect to port `80` without being an `administrator`,  \n",
+    "binding wouldn’t work.  \n",
+    "- Binding also wouldn’t work, for example, if we ran two instances of our  \n",
+    "program and so had two programs listening to the same port.  \n",
+    "\n",
+    "Because we’re writing a basic server just for learning purposes, we won’t worry  \n",
+    "about handling these kinds of errors; instead, we use unwrap to stop the  \n",
+    "program if errors happen."
    ]
   },
   {
@@ -150,32 +166,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The incoming method on TcpListener returns an iterator that gives us a sequence  \n",
-    "of streams (more specifically, streams of type TcpStream). A single stream  \n",
-    "represents an open connection between the client and the server. A connection  \n",
-    "is the name for the full request and response process in which a client  \n",
-    "connects to the server, the server generates a response, and the server closes  \n",
-    "the connection. As such, we will read from the TcpStream to see what the client  \n",
-    "sent and then write our response to the stream to send data back to the client.  \n",
-    "Overall, this for loop will process each connection in turn and produce a  \n",
-    "series of streams for us to handle.\n",
+    "#### -- TcpListener returns an iterator -> sequence of TcpStream --\n",
+    "\n",
+    "The incoming method on `TcpListener` :  \n",
+    "\n",
+    "- returns an `iterator` that gives us a sequence of `streams`  \n",
+    "- (more specifically, streams of type `TcpStream`).  \n",
+    "\n",
+    "#### -- TcpStream -> open 'connection' between client and server --\n",
+    "\n",
+    "A single stream represents an `open connection` between the client and the  \n",
+    "server. \n",
+    "\n",
+    "#### -- 'connection' -> request and response process\n",
+    "\n",
+    "A `connection` is the name for the full `request and response` process in  \n",
+    "which:  \n",
+    "\n",
+    "1. a `client connects` to the server,  \n",
+    "2. the `server generates a response`, and  \n",
+    "3. the `server closes the connection`  \n",
+    "\n",
+    "As such, we will read from the `TcpStream` to see :  \n",
+    "\n",
+    "- what the client sent and  \n",
+    "- then write our response to the stream  \n",
+    "- to send data back to the client\n",
+    "\n",
+    "#### -- PROCESS each connection : then HANDLE each stream iter --\n",
+    "\n",
+    "Overall, this for loop will :  \n",
+    "\n",
+    "- `process each connection` in turn and  \n",
+    "- produce a series of `streams for us to handle`\n",
     "\n",
     "For now, our handling of the stream consists of calling unwrap to terminate our  \n",
     "program if the stream has any errors; if there aren’t any errors, the program  \n",
-    "prints a message. We’ll add more functionality for the success case in the next  \n",
-    "listing. The reason we might receive errors from the incoming method when a  \n",
-    "client connects to the server is that we’re not actually iterating over  \n",
-    "connections. Instead, we’re iterating over connection attempts. The connection  \n",
-    "might not be successful for a number of reasons, many of them operating system  \n",
-    "specific. For example, many operating systems have a limit to the number of  \n",
-    "simultaneous open connections they can support; new connection attempts beyond  \n",
-    "that number will produce an error until some of the open connections are closed.\n",
+    "prints a message.  \n",
     "\n",
-    "Let’s try running this code! Invoke cargo run in the terminal and then  \n",
-    "load 127.0.0.1:7878 in a web browser. The browser should show an error message  \n",
-    "like “Connection reset,” because the server isn’t currently sending back any  \n",
-    "data. But when you look at your terminal, you should see several messages that  \n",
-    "were printed when the browser connected to the server!\n",
+    "#### -- Potential 'connection' ERRORS --\n",
+    "\n",
+    "We’ll add more functionality for the success case in the next listing. The  \n",
+    "reason we might receive errors from the incoming method when a client connects  \n",
+    "to the server is :  \n",
+    "\n",
+    "- that we’re not actually iterating over connections.  \n",
+    "- Instead, we’re iterating over connection attempts. \n",
+    "\n",
+    "The connection might not be successful for a number of reasons, many of them  \n",
+    "operating system specific. For example :  \n",
+    "\n",
+    "- many operating systems have a limit to the number of simultaneous open  \n",
+    "connections they can support;  \n",
+    "- new connection attempts beyond that number will produce an error until some  \n",
+    "of the open connections are closed.\n",
+    "\n",
+    "#### -- 1. Run code 2. Point Browser to address --\n",
+    "\n",
+    "Let’s try running this code!  \n",
+    "\n",
+    "- Invoke `cargo run` in the terminal and  \n",
+    "- then load `127.0.0.1:7878` in a web browser.  \n",
+    "\n",
+    "The browser should show an error message like “Connection reset,” because the  \n",
+    "server isn’t currently sending back any data. But when you look at your  \n",
+    "terminal, you should see several messages that were printed when the browser  \n",
+    "connected to the server!\n",
     "\n",
     "```sh\n",
     "Running `target/debug/hello`\n",
@@ -194,6 +250,8 @@
     "reason might be that the browser is making a request for the page as well as a  \n",
     "request for other resources, like the favicon.ico icon that appears in the  \n",
     "browser tab.\n",
+    "\n",
+    "#### -- connection lifetime : retry and drop --\n",
     "\n",
     "It could also be that the browser is trying to connect to the server multiple  \n",
     "times because the server isn’t responding with any data. When stream goes out  \n",
