ch_20_final_server : rev 6 multi -> threadpool

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -588,6 +588,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Return Blank Page --\n",
+    "\n",
     "Let’s implement the functionality for returning more than a blank page. Create  \n",
     "the new file hello.html in the root of your project directory, not in the src  \n",
     "directory. You can input any HTML you want; Listing 20-4 shows one possibility.\n",
@@ -857,6 +859,8 @@
     "> Listing 20-7: Responding with status code 404 and an error page if anything  \n",
     "other than / was requested\n",
     "\n",
+    "#### -- Returning a 404 Page --\n",
+    "\n",
     "Here, our response has a status line with status code 404 and the reason phrase  \n",
     "NOT FOUND. The body of the response will be the HTML in the file 404.html.  \n",
     "You’ll need to create a 404.html file next to hello.html for the error page;  \n",
@@ -994,7 +998,276 @@
    "metadata": {},
    "source": [
     "Turning Our Single-Threaded Server into a Multithreaded Server\n",
-    "---"
+    "---\n",
+    "\n",
+    "Right now, the server will process each request in turn, meaning it won’t  \n",
+    "process a second connection until the first is finished processing. If the  \n",
+    "server received more and more requests, this serial execution would be less and  \n",
+    "less optimal. If the server receives a request that takes a long time to  \n",
+    "process, subsequent requests will have to wait until the long request is  \n",
+    "finished, even if the new requests can be processed quickly. We’ll need to fix  \n",
+    "this, but first, we’ll look at the problem in action."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulating a Slow Request in the Current Server Implementation\n",
+    "\n",
+    "We’ll look at how a slow-processing request can affect other requests made to  \n",
+    "our current server implementation. Listing 20-10 implements handling a request  \n",
+    "to /sleep with a simulated slow response that will cause the server to sleep  \n",
+    "for 5 seconds before responding.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "    thread,\n",
+    "    time::Duration,\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_serial(mut stream: TcpStream){\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    let (status_line, filename) = match &request_line[..] {\n",
+    "        \"GET / HTTP/1.1\" => (\"HTTP/1.1 200 OK\", \"hello.html\"),\n",
+    "        \"GET /sleep HTTP/1.1\" => {\n",
+    "            thread::sleep(Duration::from_secs(5));\n",
+    "            (\"HTTP/1.1 200 OK\", \"hello_sleep.html\")\n",
+    "        }\n",
+    "\n",
+    "        _ => (\"HTTP/1.1 404 NOT FOUND\", \"404.html\"),\n",
+    "    };\n",
+    "\n",
+    "    let contents = fs::read_to_string(filename).unwrap();\n",
+    "    let length = contents.len();\n",
+    "\n",
+    "    let response =\n",
+    "        format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "\n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    for stream in listener.incoming() {\n",
+    "        let stream = stream.unwrap();\n",
+    "        handle_connection_serial(stream);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-10: Simulating a slow request by sleeping for 5 seconds\n",
+    "\n",
+    "We switched from if to match now that we have three cases. We need to  \n",
+    "explicitly match on a slice of request_line to pattern match against the string  \n",
+    "literal values; match doesn’t do automatic referencing and dereferencing like  \n",
+    "the equality method does.\n",
+    "\n",
+    "The first arm is the same as the if block from Listing 20-9. The second arm  \n",
+    "matches a request to /sleep. When that request is received, the server will  \n",
+    "sleep for 5 seconds before rendering the successful HTML page. The third arm is  \n",
+    "the same as the else block from Listing 20-9.\n",
+    "\n",
+    "You can see how primitive our server is: real libraries would handle the  \n",
+    "recognition of multiple requests in a much less verbose way!\n",
+    "\n",
+    "Start the server using cargo run. Then open two browser windows:\n",
+    "\n",
+    "- one for http://127.0.0.1:7878/ and  \n",
+    "- the other for http://127.0.0.1:7878/sleep.  \n",
+    "\n",
+    "If you enter the / URI a few times, as before, you’ll see it respond quickly.  \n",
+    "But if you enter /sleep and then load /, you’ll see that / waits until sleep  \n",
+    "has slept for its full 5 seconds before loading.\n",
+    "\n",
+    "There are multiple techniques we could use to avoid requests backing up behind  \n",
+    "a slow request; the one we’ll implement is a thread pool."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Improving Throughput with a Thread Pool\n",
+    "\n",
+    "A thread pool is a group of spawned threads that are waiting and ready to  \n",
+    "handle a task. When the program receives a new task, it assigns one of the  \n",
+    "threads in the pool to the task, and that thread will process the task. The  \n",
+    "remaining threads in the pool are available to handle any other tasks that come  \n",
+    "in while the first thread is processing. When the first thread is done  \n",
+    "processing its task, it’s returned to the pool of idle threads, ready to handle  \n",
+    "a new task. A thread pool allows you to process connections concurrently,  \n",
+    "increasing the throughput of your server.\n",
+    "\n",
+    "We’ll limit the number of threads in the pool to a small number to protect us  \n",
+    "from Denial of Service (DoS) attacks; if we had our program create a new thread  \n",
+    "for each request as it came in, someone making 10 million requests to our  \n",
+    "server could create havoc by using up all our server’s resources and grinding  \n",
+    "the processing of requests to a halt.\n",
+    "\n",
+    "Rather than spawning unlimited threads, then, we’ll have a fixed number of  \n",
+    "threads waiting in the pool. Requests that come in are sent to the pool for  \n",
+    "processing. The pool will maintain a queue of incoming requests. Each of the  \n",
+    "threads in the pool will pop off a request from this queue, handle the request,  \n",
+    "and then ask the queue for another request. With this design, we can process up  \n",
+    "to N requests concurrently, where N is the number of threads. If each thread is  \n",
+    "responding to a long-running request, subsequent requests can still back up in  \n",
+    "the queue, but we’ve increased the number of long-running requests we can  \n",
+    "handle before reaching that point.\n",
+    "\n",
+    "This technique is just one of many ways to improve the throughput of a web  \n",
+    "server. Other options you might explore are the fork/join model, the  \n",
+    "single-threaded async I/O model, or the multi-threaded async I/O model. If  \n",
+    "you’re interested in this topic, you can read more about other solutions and  \n",
+    "try to implement them; with a low-level language like Rust, all of these  \n",
+    "options are possible.\n",
+    "\n",
+    "#### -- Writing Client Interface 1st Helps Guide Server Design --\n",
+    "\n",
+    "Before we begin implementing a thread pool, let’s talk about what using the  \n",
+    "pool should look like. When you’re trying to design code, writing the client  \n",
+    "interface first can help guide your design. Write the API of the code so it’s  \n",
+    "structured in the way you want to call it; then implement the functionality  \n",
+    "within that structure rather than implementing the functionality and then  \n",
+    "designing the public API.\n",
+    "\n",
+    "Similar to how we used test-driven development in the project in Chapter 12,  \n",
+    "we’ll use compiler-driven development here. We’ll write the code that calls  \n",
+    "the functions we want, and then we’ll look at errors from the compiler to  \n",
+    "determine what we should change next to get the code to work. Before we do  \n",
+    "that, however, we’ll explore the technique we’re not going to use as a  \n",
+    "starting point."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spawning a Thread for Each Request\n",
+    "\n",
+    "First, let’s explore how our code might look if it did create a new thread for  \n",
+    "every connection. As mentioned earlier, this isn’t our final plan due to the  \n",
+    "problems with potentially spawning an unlimited number of threads, but it is a  \n",
+    "starting point to get a working multithreaded server first. Then we’ll add the  \n",
+    "thread pool as an improvement, and contrasting the two solutions will be easier.  \n",
+    "Listing 20-11 shows the changes to make to main to spawn a new thread to handle  \n",
+    "each stream within the for loop.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "    thread,\n",
+    "    time::Duration,\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_serial(mut stream: TcpStream){\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    let (status_line, filename) = match &request_line[..] {\n",
+    "        \"GET / HTTP/1.1\" => (\"HTTP/1.1 200 OK\", \"hello.html\"),\n",
+    "        \"GET /sleep HTTP/1.1\" => {\n",
+    "            // yield to sleep for 5 seconds before returning the response\n",
+    "            thread::sleep(Duration::from_secs(5));\n",
+    "            (\"HTTP/1.1 200 OK\", \"hello_sleep.html\")\n",
+    "        }\n",
+    "\n",
+    "        _ => (\"HTTP/1.1 404 NOT FOUND\", \"404.html\"),\n",
+    "    };\n",
+    "\n",
+    "    let contents = fs::read_to_string(filename).unwrap();\n",
+    "    let length = contents.len();\n",
+    "\n",
+    "    let response =\n",
+    "        format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "\n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    for stream in listener.incoming(){\n",
+    "        let stream = stream.unwrap();\n",
+    "\n",
+    "        thread::spawn(||{\n",
+    "            handle_connection_serial(stream);\n",
+    "        });\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-11: Spawning a new thread for each stream\n",
+    "\n",
+    "As you learned in Chapter 16, thread::spawn will create a new thread and then  \n",
+    "run the code in the closure in the new thread.  \n",
+    "\n",
+    "- If you run this code and  \n",
+    "- load  /sleep in your browser,  \n",
+    "- then / in two more browser tabs,  \n",
+    "- you’ll indeed see that the requests to / don’t have to wait for /sleep to  \n",
+    "finish.  \n",
+    "\n",
+    "However, as we mentioned, this will eventually overwhelm the system because  \n",
+    "you’d be making new threads without any limit."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a Finite Number of Threads\n",
+    "\n",
+    "We want our thread pool to work in a similar, familiar way so switching from  \n",
+    "threads to a thread pool doesn’t require large changes to the code that uses  \n",
+    "our API. Listing 20-12 shows the hypothetical interface for a ThreadPool struct  \n",
+    "we want to use instead of thread::spawn.\n",
+    "\n",
+    "> Filename: src/main.rs"
    ]
   }
  ],
